// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/widgets/users/Avatars should fetch missing users 1`] = `
<Memo(Avatars)
  size="xl"
  userIds={
    Array [
      "1",
      "6",
      "7",
      "2",
      "8",
      "9",
    ]
  }
>
  <div
    className="Avatars Avatars___xl"
  >
    <UserAvatar
      key="1"
      size="xl"
      style={
        Object {
          "background": "rgb(240, 240, 241)",
        }
      }
      userId="1"
    >
      <Connect(ProfilePopoverWcController)
        src="/api/v4/users/1/image?_=0"
        triggerComponentClass="style--none btn-round"
        userId="1"
      >
        <ProfilePopoverWcController
          channelId="current_channel_id"
          currentTeamName="team1"
          dispatch={[Function]}
          isAnyModalOpen={false}
          isChannelAdmin={false}
          isTeamAdmin={false}
          src="/api/v4/users/1/image?_=0"
          triggerComponentClass="style--none btn-round"
          user={
            Object {
              "first_name": "First1",
              "id": "1",
              "last_name": "Last1",
              "last_picture_update": 1620680333191,
              "nickname": "nickname1",
              "username": "first.last1",
            }
          }
          userId="1"
          userStatus="offline"
        >
          <wc-contact-sheet
            background-color="transparent"
            class="style--none btn-round"
            is-external={false}
            k-chat-team-name="team1"
            k-chat-user-name="first.last1"
            presence="offline"
            prevent-open-on-hover={true}
            prevent-stop-propagation={true}
            size="md"
            src="/api/v4/users/1/image?_=0"
            user-name="First1 Last1"
          >
            <span
              className="style--none btn-round"
              slot="trigger"
            >
              <WithTooltip
                title="first.last1"
              >
                <Avatar
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseMove={[Function]}
                  onPointerDown={[Function]}
                  onPointerEnter={[Function]}
                  size="xl"
                  style={
                    Object {
                      "background": "rgb(240, 240, 241)",
                    }
                  }
                  tabIndex={-1}
                  url="/api/v4/users/1/image?_=1620680333191"
                >
                  <img
                    alt="user profile image"
                    className="Avatar Avatar-xl"
                    loading="lazy"
                    onBlur={[Function]}
                    onError={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseMove={[Function]}
                    onPointerDown={[Function]}
                    onPointerEnter={[Function]}
                    src="/api/v4/users/1/image?_=1620680333191"
                    style={
                      Object {
                        "background": "rgb(240, 240, 241)",
                      }
                    }
                    tabIndex={-1}
                  />
                </Avatar>
              </WithTooltip>
            </span>
          </wc-contact-sheet>
        </ProfilePopoverWcController>
      </Connect(ProfilePopoverWcController)>
    </UserAvatar>
    <UserAvatar
      key="6"
      size="xl"
      style={
        Object {
          "background": "rgb(240, 240, 241)",
        }
      }
      userId="6"
    >
      <Connect(ProfilePopoverWcController)
        src="/api/v4/users/6/image?_=0"
        triggerComponentClass="style--none btn-round"
        userId="6"
      >
        <ProfilePopoverWcController
          channelId="current_channel_id"
          currentTeamName="team1"
          dispatch={[Function]}
          isAnyModalOpen={false}
          isChannelAdmin={false}
          isTeamAdmin={false}
          src="/api/v4/users/6/image?_=0"
          triggerComponentClass="style--none btn-round"
          userId="6"
          userStatus="offline"
        >
          <wc-contact-sheet
            background-color="transparent"
            class="style--none btn-round"
            is-external={false}
            k-chat-team-name="team1"
            presence="offline"
            prevent-open-on-hover={true}
            prevent-stop-propagation={true}
            size="md"
            src="/api/v4/users/6/image?_=0"
            user-name="undefined undefined"
          >
            <span
              className="style--none btn-round"
              slot="trigger"
            >
              <WithTooltip
                title="Someone"
              >
                <Avatar
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseMove={[Function]}
                  onPointerDown={[Function]}
                  onPointerEnter={[Function]}
                  size="xl"
                  style={
                    Object {
                      "background": "rgb(240, 240, 241)",
                    }
                  }
                  tabIndex={-1}
                  url="/api/v4/users/6/image?_=0"
                >
                  <img
                    alt="user profile image"
                    className="Avatar Avatar-xl"
                    loading="lazy"
                    onBlur={[Function]}
                    onError={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseMove={[Function]}
                    onPointerDown={[Function]}
                    onPointerEnter={[Function]}
                    src="/api/v4/users/6/image?_=0"
                    style={
                      Object {
                        "background": "rgb(240, 240, 241)",
                      }
                    }
                    tabIndex={-1}
                  />
                </Avatar>
              </WithTooltip>
            </span>
          </wc-contact-sheet>
        </ProfilePopoverWcController>
      </Connect(ProfilePopoverWcController)>
    </UserAvatar>
    <UserAvatar
      key="7"
      size="xl"
      style={
        Object {
          "background": "rgb(240, 240, 241)",
        }
      }
      userId="7"
    >
      <Connect(ProfilePopoverWcController)
        src="/api/v4/users/7/image?_=0"
        triggerComponentClass="style--none btn-round"
        userId="7"
      >
        <ProfilePopoverWcController
          channelId="current_channel_id"
          currentTeamName="team1"
          dispatch={[Function]}
          isAnyModalOpen={false}
          isChannelAdmin={false}
          isTeamAdmin={false}
          src="/api/v4/users/7/image?_=0"
          triggerComponentClass="style--none btn-round"
          userId="7"
          userStatus="offline"
        >
          <wc-contact-sheet
            background-color="transparent"
            class="style--none btn-round"
            is-external={false}
            k-chat-team-name="team1"
            presence="offline"
            prevent-open-on-hover={true}
            prevent-stop-propagation={true}
            size="md"
            src="/api/v4/users/7/image?_=0"
            user-name="undefined undefined"
          >
            <span
              className="style--none btn-round"
              slot="trigger"
            >
              <WithTooltip
                title="Someone"
              >
                <Avatar
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseMove={[Function]}
                  onPointerDown={[Function]}
                  onPointerEnter={[Function]}
                  size="xl"
                  style={
                    Object {
                      "background": "rgb(240, 240, 241)",
                    }
                  }
                  tabIndex={-1}
                  url="/api/v4/users/7/image?_=0"
                >
                  <img
                    alt="user profile image"
                    className="Avatar Avatar-xl"
                    loading="lazy"
                    onBlur={[Function]}
                    onError={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseMove={[Function]}
                    onPointerDown={[Function]}
                    onPointerEnter={[Function]}
                    src="/api/v4/users/7/image?_=0"
                    style={
                      Object {
                        "background": "rgb(240, 240, 241)",
                      }
                    }
                    tabIndex={-1}
                  />
                </Avatar>
              </WithTooltip>
            </span>
          </wc-contact-sheet>
        </ProfilePopoverWcController>
      </Connect(ProfilePopoverWcController)>
    </UserAvatar>
    <WithTooltip
      title="first.last2, Someone, Someone"
    >
      <Avatar
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseLeave={[Function]}
        onMouseMove={[Function]}
        onPointerDown={[Function]}
        onPointerEnter={[Function]}
        size="xl"
        style={
          Object {
            "background": "rgb(240, 240, 241)",
          }
        }
        tabIndex={0}
        text="+3"
      >
        <div
          className="Avatar Avatar-xl Avatar-plain"
          data-content="+3"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onMouseLeave={[Function]}
          onMouseMove={[Function]}
          onPointerDown={[Function]}
          onPointerEnter={[Function]}
          style={
            Object {
              "background": "rgb(240, 240, 241)",
            }
          }
          tabIndex={0}
        />
      </Avatar>
    </WithTooltip>
  </div>
</Memo(Avatars)>
`;

exports[`components/widgets/users/Avatars should properly count overflow 1`] = `
<Memo(Avatars)
  size="xl"
  userIds={
    Array [
      "1",
      "2",
      "3",
      "4",
      "5",
    ]
  }
>
  <div
    className="Avatars Avatars___xl"
  >
    <UserAvatar
      key="1"
      size="xl"
      style={
        Object {
          "background": "rgb(240, 240, 241)",
        }
      }
      userId="1"
    >
      <Connect(ProfilePopoverWcController)
        src="/api/v4/users/1/image?_=0"
        triggerComponentClass="style--none btn-round"
        userId="1"
      >
        <ProfilePopoverWcController
          channelId="current_channel_id"
          currentTeamName="team1"
          dispatch={[Function]}
          isAnyModalOpen={false}
          isChannelAdmin={false}
          isTeamAdmin={false}
          src="/api/v4/users/1/image?_=0"
          triggerComponentClass="style--none btn-round"
          user={
            Object {
              "first_name": "First1",
              "id": "1",
              "last_name": "Last1",
              "last_picture_update": 1620680333191,
              "nickname": "nickname1",
              "username": "first.last1",
            }
          }
          userId="1"
          userStatus="offline"
        >
          <wc-contact-sheet
            background-color="transparent"
            class="style--none btn-round"
            is-external={false}
            k-chat-team-name="team1"
            k-chat-user-name="first.last1"
            presence="offline"
            prevent-open-on-hover={true}
            prevent-stop-propagation={true}
            size="md"
            src="/api/v4/users/1/image?_=0"
            user-name="First1 Last1"
          >
            <span
              className="style--none btn-round"
              slot="trigger"
            >
              <WithTooltip
                title="first.last1"
              >
                <Avatar
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseMove={[Function]}
                  onPointerDown={[Function]}
                  onPointerEnter={[Function]}
                  size="xl"
                  style={
                    Object {
                      "background": "rgb(240, 240, 241)",
                    }
                  }
                  tabIndex={-1}
                  url="/api/v4/users/1/image?_=1620680333191"
                >
                  <img
                    alt="user profile image"
                    className="Avatar Avatar-xl"
                    loading="lazy"
                    onBlur={[Function]}
                    onError={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseMove={[Function]}
                    onPointerDown={[Function]}
                    onPointerEnter={[Function]}
                    src="/api/v4/users/1/image?_=1620680333191"
                    style={
                      Object {
                        "background": "rgb(240, 240, 241)",
                      }
                    }
                    tabIndex={-1}
                  />
                </Avatar>
              </WithTooltip>
            </span>
          </wc-contact-sheet>
        </ProfilePopoverWcController>
      </Connect(ProfilePopoverWcController)>
    </UserAvatar>
    <UserAvatar
      key="2"
      size="xl"
      style={
        Object {
          "background": "rgb(240, 240, 241)",
        }
      }
      userId="2"
    >
      <Connect(ProfilePopoverWcController)
        src="/api/v4/users/2/image?_=0"
        triggerComponentClass="style--none btn-round"
        userId="2"
      >
        <ProfilePopoverWcController
          channelId="current_channel_id"
          currentTeamName="team1"
          dispatch={[Function]}
          isAnyModalOpen={false}
          isChannelAdmin={false}
          isTeamAdmin={false}
          src="/api/v4/users/2/image?_=0"
          triggerComponentClass="style--none btn-round"
          user={
            Object {
              "first_name": "First2",
              "id": "2",
              "last_name": "Last2",
              "last_picture_update": 1620680333191,
              "nickname": "nickname2",
              "username": "first.last2",
            }
          }
          userId="2"
          userStatus="offline"
        >
          <wc-contact-sheet
            background-color="transparent"
            class="style--none btn-round"
            is-external={false}
            k-chat-team-name="team1"
            k-chat-user-name="first.last2"
            presence="offline"
            prevent-open-on-hover={true}
            prevent-stop-propagation={true}
            size="md"
            src="/api/v4/users/2/image?_=0"
            user-name="First2 Last2"
          >
            <span
              className="style--none btn-round"
              slot="trigger"
            >
              <WithTooltip
                title="first.last2"
              >
                <Avatar
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseMove={[Function]}
                  onPointerDown={[Function]}
                  onPointerEnter={[Function]}
                  size="xl"
                  style={
                    Object {
                      "background": "rgb(240, 240, 241)",
                    }
                  }
                  tabIndex={-1}
                  url="/api/v4/users/2/image?_=1620680333191"
                >
                  <img
                    alt="user profile image"
                    className="Avatar Avatar-xl"
                    loading="lazy"
                    onBlur={[Function]}
                    onError={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseMove={[Function]}
                    onPointerDown={[Function]}
                    onPointerEnter={[Function]}
                    src="/api/v4/users/2/image?_=1620680333191"
                    style={
                      Object {
                        "background": "rgb(240, 240, 241)",
                      }
                    }
                    tabIndex={-1}
                  />
                </Avatar>
              </WithTooltip>
            </span>
          </wc-contact-sheet>
        </ProfilePopoverWcController>
      </Connect(ProfilePopoverWcController)>
    </UserAvatar>
    <UserAvatar
      key="3"
      size="xl"
      style={
        Object {
          "background": "rgb(240, 240, 241)",
        }
      }
      userId="3"
    >
      <Connect(ProfilePopoverWcController)
        src="/api/v4/users/3/image?_=0"
        triggerComponentClass="style--none btn-round"
        userId="3"
      >
        <ProfilePopoverWcController
          channelId="current_channel_id"
          currentTeamName="team1"
          dispatch={[Function]}
          isAnyModalOpen={false}
          isChannelAdmin={false}
          isTeamAdmin={false}
          src="/api/v4/users/3/image?_=0"
          triggerComponentClass="style--none btn-round"
          user={
            Object {
              "first_name": "First3",
              "id": "3",
              "last_name": "Last3",
              "last_picture_update": 1620680333191,
              "nickname": "nickname3",
              "username": "first.last3",
            }
          }
          userId="3"
          userStatus="offline"
        >
          <wc-contact-sheet
            background-color="transparent"
            class="style--none btn-round"
            is-external={false}
            k-chat-team-name="team1"
            k-chat-user-name="first.last3"
            presence="offline"
            prevent-open-on-hover={true}
            prevent-stop-propagation={true}
            size="md"
            src="/api/v4/users/3/image?_=0"
            user-name="First3 Last3"
          >
            <span
              className="style--none btn-round"
              slot="trigger"
            >
              <WithTooltip
                title="first.last3"
              >
                <Avatar
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseMove={[Function]}
                  onPointerDown={[Function]}
                  onPointerEnter={[Function]}
                  size="xl"
                  style={
                    Object {
                      "background": "rgb(240, 240, 241)",
                    }
                  }
                  tabIndex={-1}
                  url="/api/v4/users/3/image?_=1620680333191"
                >
                  <img
                    alt="user profile image"
                    className="Avatar Avatar-xl"
                    loading="lazy"
                    onBlur={[Function]}
                    onError={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseMove={[Function]}
                    onPointerDown={[Function]}
                    onPointerEnter={[Function]}
                    src="/api/v4/users/3/image?_=1620680333191"
                    style={
                      Object {
                        "background": "rgb(240, 240, 241)",
                      }
                    }
                    tabIndex={-1}
                  />
                </Avatar>
              </WithTooltip>
            </span>
          </wc-contact-sheet>
        </ProfilePopoverWcController>
      </Connect(ProfilePopoverWcController)>
    </UserAvatar>
    <WithTooltip
      title="first.last4, first.last5"
    >
      <Avatar
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseLeave={[Function]}
        onMouseMove={[Function]}
        onPointerDown={[Function]}
        onPointerEnter={[Function]}
        size="xl"
        style={
          Object {
            "background": "rgb(240, 240, 241)",
          }
        }
        tabIndex={0}
        text="+2"
      >
        <div
          className="Avatar Avatar-xl Avatar-plain"
          data-content="+2"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onMouseLeave={[Function]}
          onMouseMove={[Function]}
          onPointerDown={[Function]}
          onPointerEnter={[Function]}
          style={
            Object {
              "background": "rgb(240, 240, 241)",
            }
          }
          tabIndex={0}
        />
      </Avatar>
    </WithTooltip>
  </div>
</Memo(Avatars)>
`;

exports[`components/widgets/users/Avatars should support userIds 1`] = `
<Memo(Avatars)
  size="xl"
  userIds={
    Array [
      "1",
      "2",
      "3",
    ]
  }
>
  <div
    className="Avatars Avatars___xl"
  >
    <UserAvatar
      key="1"
      size="xl"
      style={
        Object {
          "background": "rgb(240, 240, 241)",
        }
      }
      userId="1"
    >
      <Connect(ProfilePopoverWcController)
        src="/api/v4/users/1/image?_=0"
        triggerComponentClass="style--none btn-round"
        userId="1"
      >
        <ProfilePopoverWcController
          channelId="current_channel_id"
          currentTeamName="team1"
          dispatch={[Function]}
          isAnyModalOpen={false}
          isChannelAdmin={false}
          isTeamAdmin={false}
          src="/api/v4/users/1/image?_=0"
          triggerComponentClass="style--none btn-round"
          user={
            Object {
              "first_name": "First1",
              "id": "1",
              "last_name": "Last1",
              "last_picture_update": 1620680333191,
              "nickname": "nickname1",
              "username": "first.last1",
            }
          }
          userId="1"
          userStatus="offline"
        >
          <wc-contact-sheet
            background-color="transparent"
            class="style--none btn-round"
            is-external={false}
            k-chat-team-name="team1"
            k-chat-user-name="first.last1"
            presence="offline"
            prevent-open-on-hover={true}
            prevent-stop-propagation={true}
            size="md"
            src="/api/v4/users/1/image?_=0"
            user-name="First1 Last1"
          >
            <span
              className="style--none btn-round"
              slot="trigger"
            >
              <WithTooltip
                title="first.last1"
              >
                <Avatar
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseMove={[Function]}
                  onPointerDown={[Function]}
                  onPointerEnter={[Function]}
                  size="xl"
                  style={
                    Object {
                      "background": "rgb(240, 240, 241)",
                    }
                  }
                  tabIndex={-1}
                  url="/api/v4/users/1/image?_=1620680333191"
                >
                  <img
                    alt="user profile image"
                    className="Avatar Avatar-xl"
                    loading="lazy"
                    onBlur={[Function]}
                    onError={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseMove={[Function]}
                    onPointerDown={[Function]}
                    onPointerEnter={[Function]}
                    src="/api/v4/users/1/image?_=1620680333191"
                    style={
                      Object {
                        "background": "rgb(240, 240, 241)",
                      }
                    }
                    tabIndex={-1}
                  />
                </Avatar>
              </WithTooltip>
            </span>
          </wc-contact-sheet>
        </ProfilePopoverWcController>
      </Connect(ProfilePopoverWcController)>
    </UserAvatar>
    <UserAvatar
      key="2"
      size="xl"
      style={
        Object {
          "background": "rgb(240, 240, 241)",
        }
      }
      userId="2"
    >
      <Connect(ProfilePopoverWcController)
        src="/api/v4/users/2/image?_=0"
        triggerComponentClass="style--none btn-round"
        userId="2"
      >
        <ProfilePopoverWcController
          channelId="current_channel_id"
          currentTeamName="team1"
          dispatch={[Function]}
          isAnyModalOpen={false}
          isChannelAdmin={false}
          isTeamAdmin={false}
          src="/api/v4/users/2/image?_=0"
          triggerComponentClass="style--none btn-round"
          user={
            Object {
              "first_name": "First2",
              "id": "2",
              "last_name": "Last2",
              "last_picture_update": 1620680333191,
              "nickname": "nickname2",
              "username": "first.last2",
            }
          }
          userId="2"
          userStatus="offline"
        >
          <wc-contact-sheet
            background-color="transparent"
            class="style--none btn-round"
            is-external={false}
            k-chat-team-name="team1"
            k-chat-user-name="first.last2"
            presence="offline"
            prevent-open-on-hover={true}
            prevent-stop-propagation={true}
            size="md"
            src="/api/v4/users/2/image?_=0"
            user-name="First2 Last2"
          >
            <span
              className="style--none btn-round"
              slot="trigger"
            >
              <WithTooltip
                title="first.last2"
              >
                <Avatar
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseMove={[Function]}
                  onPointerDown={[Function]}
                  onPointerEnter={[Function]}
                  size="xl"
                  style={
                    Object {
                      "background": "rgb(240, 240, 241)",
                    }
                  }
                  tabIndex={-1}
                  url="/api/v4/users/2/image?_=1620680333191"
                >
                  <img
                    alt="user profile image"
                    className="Avatar Avatar-xl"
                    loading="lazy"
                    onBlur={[Function]}
                    onError={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseMove={[Function]}
                    onPointerDown={[Function]}
                    onPointerEnter={[Function]}
                    src="/api/v4/users/2/image?_=1620680333191"
                    style={
                      Object {
                        "background": "rgb(240, 240, 241)",
                      }
                    }
                    tabIndex={-1}
                  />
                </Avatar>
              </WithTooltip>
            </span>
          </wc-contact-sheet>
        </ProfilePopoverWcController>
      </Connect(ProfilePopoverWcController)>
    </UserAvatar>
    <UserAvatar
      key="3"
      size="xl"
      style={
        Object {
          "background": "rgb(240, 240, 241)",
        }
      }
      userId="3"
    >
      <Connect(ProfilePopoverWcController)
        src="/api/v4/users/3/image?_=0"
        triggerComponentClass="style--none btn-round"
        userId="3"
      >
        <ProfilePopoverWcController
          channelId="current_channel_id"
          currentTeamName="team1"
          dispatch={[Function]}
          isAnyModalOpen={false}
          isChannelAdmin={false}
          isTeamAdmin={false}
          src="/api/v4/users/3/image?_=0"
          triggerComponentClass="style--none btn-round"
          user={
            Object {
              "first_name": "First3",
              "id": "3",
              "last_name": "Last3",
              "last_picture_update": 1620680333191,
              "nickname": "nickname3",
              "username": "first.last3",
            }
          }
          userId="3"
          userStatus="offline"
        >
          <wc-contact-sheet
            background-color="transparent"
            class="style--none btn-round"
            is-external={false}
            k-chat-team-name="team1"
            k-chat-user-name="first.last3"
            presence="offline"
            prevent-open-on-hover={true}
            prevent-stop-propagation={true}
            size="md"
            src="/api/v4/users/3/image?_=0"
            user-name="First3 Last3"
          >
            <span
              className="style--none btn-round"
              slot="trigger"
            >
              <WithTooltip
                title="first.last3"
              >
                <Avatar
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseMove={[Function]}
                  onPointerDown={[Function]}
                  onPointerEnter={[Function]}
                  size="xl"
                  style={
                    Object {
                      "background": "rgb(240, 240, 241)",
                    }
                  }
                  tabIndex={-1}
                  url="/api/v4/users/3/image?_=1620680333191"
                >
                  <img
                    alt="user profile image"
                    className="Avatar Avatar-xl"
                    loading="lazy"
                    onBlur={[Function]}
                    onError={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseMove={[Function]}
                    onPointerDown={[Function]}
                    onPointerEnter={[Function]}
                    src="/api/v4/users/3/image?_=1620680333191"
                    style={
                      Object {
                        "background": "rgb(240, 240, 241)",
                      }
                    }
                    tabIndex={-1}
                  />
                </Avatar>
              </WithTooltip>
            </span>
          </wc-contact-sheet>
        </ProfilePopoverWcController>
      </Connect(ProfilePopoverWcController)>
    </UserAvatar>
  </div>
</Memo(Avatars)>
`;
